# vercel-service-api

./: .gitignore  .vercelignore  README.md  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.mjs
api/: index.py
api/handler/auth/: __init__.py  user.py
api/handler/guard/: __init__.py  no_route.py
api/utils/: __init__.py  logger.py  models.py  simple_db.py
app/: globals.css  layout.tsx  page.tsx
app/api/login/: route.ts  util.ts
app/auth/: page.tsx
app/components/: LoginForm.tsx
app/config/: errors.ts  request.ts
app/demo/: page.tsx
app/hooks/: useLogin.tsx
app/views/auth/: _index.tsx  index.tsx
test/: main_test.go
