[project]
name = "vercel-service-api"
version = "0.1.0"
description = "vercel-service-api local dev service"
authors = [{ name = "fromsko", email = "1614355756@qq.com" }]
dependencies = [
    "pickledb>=0.9.2",
    "uvicorn[standard]==0.30.6",
    "fastapi==0.115.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.rye.scripts]
demo = "uvicorn api.index:app --reload"
